[project]
name = "devgoldy-xyz"
version = "0.1.0"
description = "My main Website"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "fastapi[standard]~=0.136.0",
    "aiofiles~=25.1.0",
    "jinja2~=3.1.6",
    "aiohttp~=3.13.5",
    "python-decouple~=3.8",
    "pyromark~=0.9.10",
    "beautifulsoup4~=4.14.3",
    "fastapi-tailwind~=2.0.4a1",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "app.__version__" }

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "ruff~=0.15.11",
    "ty~=0.0.31",
]
